Set maximum-scale of index.html to 1, to prevent page from zooming when field is selected on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,8 @@ a {
   flex-direction: column;
   align-items: center;
 }
+
+/* Increase size of username text field */
+#username {
+  font-size: 16px;
+}
